--- a/spring-petclinic-admin-server/Dockerfile
+++ b/spring-petclinic-admin-server/Dockerfile
@@ -3,4 +3,4 @@ ENV SPRING_PROFILES_ACTIVE docker
 WORKDIR /app
 COPY ./target/*.jar app.jar
 EXPOSE 9090
-CMD ["java", "-jar","/app.jar"]
+CMD ["java", "-jar","./app.jar"]
