--- a/spring-petclinic-hystrix-dashboard/Dockerfile
+++ b/spring-petclinic-hystrix-dashboard/Dockerfile
@@ -3,4 +3,4 @@ ENV SPRING_PROFILES_ACTIVE docker
 WORKDIR /app
 COPY ./target/*.jar app.jar
 EXPOSE 7979
-CMD ["java", "-jar","/app.jar"]
+CMD ["java", "-jar","./app.jar"]
