--- a/spring-petclinic-visits-service/Dockerfile
+++ b/spring-petclinic-visits-service/Dockerfile
@@ -3,4 +3,4 @@ ENV SPRING_PROFILES_ACTIVE docker,mysql
 WORKDIR /app
 COPY ./target/*.jar app.jar
 EXPOSE 8082
-CMD ["java", "-jar","/app.jar"]
+CMD ["java", "-jar","./app.jar"]
